--- a/WC Fun 2018/Base.lproj/Main.storyboard
+++ b/WC Fun 2018/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
             </objects>
             <point key="canvasLocation" x="1108" y="33.733133433283363"/>
         </scene>
-        <!--Футболисты-->
+        <!--Players-->
         <scene sceneID="jGO-NC-BS6">
             <objects>
                 <viewController id="O9p-0W-bXe" customClass="RatingViewController" sceneMemberID="viewController">
@@ -102,8 +102,8 @@
                                 <rect key="frame" x="16" y="20" width="343" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
-                                    <segment title="Голосовать"/>
-                                    <segment title="Рейтинг"/>
+                                    <segment title="Vote"/>
+                                    <segment title="Rating"/>
                                 </segments>
                                 <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
@@ -130,8 +130,8 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="77.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1. Cristiano Ronaldo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="hFx-rL-vRU">
-                                                            <rect key="frame" x="15" y="11" width="271" height="55"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cristiano Ronaldo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="hFx-rL-vRU">
+                                                            <rect key="frame" x="63" y="11" width="224" height="32"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="30"/>
                                                             <nil key="textColor"/>
@@ -141,11 +141,27 @@
                                                             <rect key="frame" x="300" y="8" width="60" height="60"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iKi-M7-wMe">
+                                                            <rect key="frame" x="15" y="11" width="48" height="56"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="35"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score: 98.8%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qy4-NC-rmz">
+                                                            <rect key="frame" x="63" y="46" width="110" height="21"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="17"/>
+                                                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                 </tableViewCellContentView>
                                                 <connections>
                                                     <outlet property="flagImageView" destination="OJq-4x-uME" id="quW-pS-eTa"/>
+                                                    <outlet property="indexLabel" destination="iKi-M7-wMe" id="Z2O-VS-mbL"/>
                                                     <outlet property="playerLabel" destination="hFx-rL-vRU" id="L8e-BP-dtk"/>
+                                                    <outlet property="scoreLabel" destination="qy4-NC-rmz" id="6Ur-qo-I5v"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
@@ -240,7 +256,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Sbn-h4-e8r"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Футболисты" id="KQt-go-hC0">
+                    <navigationItem key="navigationItem" title="Players" id="KQt-go-hC0">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="list" id="kba-tt-1MF">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
@@ -267,7 +283,7 @@
             </objects>
             <point key="canvasLocation" x="2045.5999999999999" y="821.73913043478262"/>
         </scene>
-        <!--Матчи-->
+        <!--Matches-->
         <scene sceneID="Idu-sO-3Eu">
             <objects>
                 <viewController id="8kJ-7r-VvP" customClass="MatchViewController" sceneMemberID="viewController">
@@ -277,7 +293,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="4jN-SG-D4B"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Матчи" id="C1t-Kr-E3P">
+                    <navigationItem key="navigationItem" title="Matches" id="C1t-Kr-E3P">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="list" id="GC0-kq-Dy3">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
@@ -288,30 +304,105 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jCP-lT-pcn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2105" y="1648"/>
+            <point key="canvasLocation" x="2104.8000000000002" y="1647.5262368815593"/>
         </scene>
-        <!--Турнир-->
+        <!--Predictions-->
         <scene sceneID="b0s-gW-HzA">
             <objects>
                 <viewController id="UiR-HR-R4e" customClass="GroupViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="d9f-s9-KWl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="ajc-97-chO">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="wc" translatesAutoresizingMaskIntoConstraints="NO" id="Dfe-AT-jGE">
+                                <rect key="frame" x="16" y="20" width="343" height="458"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="For-r8-4ji">
+                                <rect key="frame" x="31" y="523" width="312" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.2784313725" green="0.60392156860000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="25"/>
+                                <state key="normal" title="Predictions">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="predictionsButtonTapped:" destination="UiR-HR-R4e" eventType="touchUpInside" id="Z4t-56-gAH"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="mcH-LO-Bwv"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Турнир" id="Ih7-3p-iA9">
+                    <navigationItem key="navigationItem" title="Predictions" id="Ih7-3p-iA9">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="list" id="wmy-YY-Ch5">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="predictionsButton" destination="For-r8-4ji" id="eDo-N6-Zt9"/>
                         <outlet property="sidebarButton" destination="wmy-YY-Ch5" id="H1z-p1-UQ6"/>
+                        <segue destination="yb4-L1-h6y" kind="presentation" identifier="tree" id="IjQ-k1-vUa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TD2-sq-iUL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2104.8000000000002" y="2353.6731634182911"/>
+        </scene>
+        <!--Bracket View Controller-->
+        <scene sceneID="fN6-cY-rnZ">
+            <objects>
+                <viewController id="yb4-L1-h6y" customClass="CKBracketViewController" customModule="WC_Fun_2018" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h9C-pm-0Wt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="67Z-Rq-0uP">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.2784313725" green="0.60392156860000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLr-4m-t8s">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.2784313725" green="0.60392156860000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="0.2784313725" green="0.60392156860000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </textAttributes>
+                                <textAttributes key="largeTitleTextAttributes">
+                                    <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Tournament Tree" id="2hu-3v-7gT">
+                                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="done" id="gKM-68-IXS">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <connections>
+                                                <action selector="doneButtonTapped:" destination="yb4-L1-h6y" id="ju3-DK-8tS"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="1fe-yU-YKt">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="4L5-YA-vgy"/>
+                    </view>
+                    <connections>
+                        <outlet property="navBar" destination="kLr-4m-t8s" id="aRR-RT-Uyb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fVw-wQ-So1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3112.8000000000002" y="2358.170914542729"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ubb-Lk-2n0">
@@ -387,6 +478,7 @@
         <image name="de" width="165" height="165"/>
         <image name="list" width="22" height="15"/>
         <image name="pt" width="183" height="183"/>
+        <image name="wc" width="1200" height="1324"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="yyP-DM-WbU"/>
